# pg_publish

./: Cargo.toml  README.md
pg_publish/: Cargo.toml
pg_publish/examples/: stdout.rs
pg_publish/scripts/: init_db.sh
pg_publish/src/: escape.rs  lib.rs  table.rs
pg_publish/src/clients/: mod.rs  postgres.rs
pg_publish/src/conversions/: cdc_event.rs  cdc_operation_event.rs  json_cell.rs  mod.rs  relation.rs
pg_publish/src/pipeline/: data_pipeline.rs  mod.rs  publisher.rs
pg_publish/src/pipeline/batching/: mod.rs  stream.rs
pg_publish/src/pipeline/destinations/: mod.rs  stdout.rs
pg_publish/src/pipeline/publisher/: mod.rs
pg_publish/src/pipeline/sources/: mod.rs
pg_publish/src/pipeline/sources/postgres/: mod.rs  stream.rs
pg_publish/src/pipeline/stores/: memory.rs  mod.rs  store.rs
