[workspace]

resolver = "2"

members = ["pg_publish"]

[workspace.dependencies]
pg_replicate = { git = "https://github.com/supabase/pg_replicate", features = [] }
tokio = { version = "1.38" }
async-trait = { version = "0.1" }
futures = { version = "0.3", default-features = false }
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres", default-features = false, rev = "02336bebb28507665184c21566e5d1dc8de1dd7d", features = ["runtime", "with-chrono-0_4"] }
tracing = { version = "0.1", default-features = false }
cel-interpreter = "0.8.1"
pin-project-lite = { version = "0.2", default-features = false }
thiserror = "1.0"
bytes = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
postgres-protocol = { git = "https://github.com/MaterializeInc/rust-postgres", rev = "02336bebb28507665184c21566e5d1dc8de1dd7d" }
clap = { version = "4.5", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }

reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio-util = { version = "0.7.12", default-features = false }
backon = "1.2.0"
slatedb = "0.2.0"
