[package]
name = "pg_publish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "stdout"

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
futures = { workspace = true }
pin-project-lite = { workspace = true }
postgres-protocol = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-postgres = { workspace = true, features = ["runtime", "with-serde_json-1"] }
tracing = { workspace = true, default-features = true }
tokio-util = { workspace = true, features = ["rt"] }
backon = { workspace = true  }
futures-util = "0.3.30"

slatedb = { workspace = true  }

[dev-dependencies]
clap = { workspace = true, default-features = true, features = [
    "std",
    "derive",
] }
tracing-subscriber = { workspace = true, default-features = true, features = [
    "env-filter",
] }

